// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chart Component should be able to update color 1`] = `

<game-chart>
  <div class="chart-container">
    <div class="bar"
         style="width: 48px; background-color: #ff0000;"
    >
      3
    </div>
    <div class="bar"
         style="width: 32px; background-color: #ff0000;"
    >
      2
    </div>
    <div class="bar"
         style="width: 16px; background-color: #ff0000;"
    >
      1
    </div>
  </div>
</game-chart>

`;

exports[`Chart Component should be able to update color 2`] = `

<game-chart>
  <div class="chart-container">
    <div class="bar"
         style="width: 48px; background-color: #00ff00;"
    >
      3
    </div>
    <div class="bar"
         style="width: 32px; background-color: #00ff00;"
    >
      2
    </div>
    <div class="bar"
         style="width: 16px; background-color: #00ff00;"
    >
      1
    </div>
  </div>
</game-chart>

`;

exports[`Chart Component should display chart with bar 1`] = `

<game-chart>
  <div class="chart-container">
    <div class="bar"
         style="width: 48px; background-color: #ff0000;"
    >
      3
    </div>
    <div class="bar"
         style="width: 32px; background-color: #ff0000;"
    >
      2
    </div>
    <div class="bar"
         style="width: 16px; background-color: #ff0000;"
    >
      1
    </div>
  </div>
</game-chart>

`;

exports[`Chart Component should display empty chart 1`] = `

<game-chart>
  <div class="chart-container">
  </div>
</game-chart>

`;
